--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.9.2",
     "bulma-css-variables": "^0.9.33",
     "core-js": "^3.6.5",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.3",
     "graphql-request": "^3.5.0",
     "register-service-worker": "^1.7.1",
